fixed alignment in mobile view

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -22,6 +22,7 @@
     @include for-phone-only {
       border-radius: 0px 0px 0px 0px;
       width: 100%;
+      padding: $spacing-02 $spacing-03 0 $spacing-03;
     }
   }
 
@@ -39,6 +40,10 @@
     display: flex;
     justify-content: space-between;
     width: 12rem;
+
+    @include for-phone-only {
+      width: 100%;
+    }
   }
 
   &__contact-container {
